--- a/src/auth/requirements.txt
+++ b/src/auth/requirements.txt
@@ -1,21 +1,19 @@
-astroid==2.15.5
-blinker==1.6.2
-click==8.1.3
-dill==0.3.6
-Flask==2.3.2
-Flask-MySQLdb==1.0.1
-isort==5.12.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-lazy-object-proxy==1.9.0
-MarkupSafe==2.1.3
-mccabe==0.7.0
-mysqlclient==2.1.1
+astroid==2.9.3
+click==8.0.3
+Flask==2.0.2
+Flask-MySQLdb==0.2.0
+isort==5.10.1
+itsdangerous==2.0.1
+jedi==0.18.1
+Jinja2==3.0.3
+lazy-object-proxy==1.7.1
+MarkupSafe==2.0.1
+mccabe==0.6.1
+mysqlclient==2.1.0
 parso==0.8.3
-platformdirs==3.5.1
-PyJWT==2.7.0
-pylint==2.17.4
-tomlkit==0.11.8
-Werkzeug==2.3.4
-wrapt==1.15.0
+platformdirs==2.4.1
+PyJWT==2.3.0
+pylint==2.12.2
+toml==0.10.2
+Werkzeug==2.0.2
+wrapt==1.13.3
